--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,6 @@ services:
     image: mongo:7
     container_name: mongo
     restart: always
-    ports:
-      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: 7325APM
@@ -36,9 +34,9 @@ services:
     depends_on:
       - mongo
     environment:
-      - MONGODB_URI=mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
-      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
-      - JWT_SECRET: ${JWT_SECRET}
+      MONGODB_URI: mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      JWT_SECRET: ${JWT_SECRET}
 
   frontend:
     build: ./Frontend
