--- a/.github/workflows/docker-compose-ci.yml
+++ b/.github/workflows/docker-compose-ci.yml
@@ -1,49 +1,46 @@
-name: Docker Compose CI
+name: Deploy to EC2
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build-and-run:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Install Docker Compose
+      - name: Setup SSH
         run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.25.0/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose version
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Build Docker images
+      - name: Sync project to EC2
         run: |
-          docker-compose build
+          rsync -avz --delete \
+            --exclude=".git" \
+            --exclude="node_modules" \
+            ./ \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/EcommerceApp
 
-      - name: Start services
+      - name: Deploy using Docker Compose on EC2
         run: |
-          docker-compose up -d
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
+            set -e
+            cd ~/EcommerceApp
 
-      - name: Check running containers
-        run: |
-          docker ps
-          docker-compose ps
+            export MONGO_ROOT_USER=${{ secrets.MONGO_ROOT_USER }}
+            export MONGO_ROOT_PASSWORD=${{ secrets.MONGO_ROOT_PASSWORD }}
+            export MONGO_DB_NAME=${{ secrets.MONGO_DB_NAME }}
+            export JWT_SECRET=${{ secrets.JWT_SECRET }}
+            export SESSION_SECRET=${{ secrets.SESSION_SECRET }}
 
-      - name: Wait for MongoDB
-        run: |
-          sleep 15
-          docker logs mongo
-
-      - name: Stop services
-        if: always()
-        run: |
-          docker-compose down -v
+            docker-compose down
+            docker-compose build
+            docker-compose up -d
+          EOF
