--- a/.github/workflows/docker-compose-ci.yml
+++ b/.github/workflows/docker-compose-ci.yml
@@ -1,46 +1,48 @@
-name: Deploy to EC2
+name: Docker Compose CI
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  deploy:
+  docker-compose-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup SSH
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Verify Docker
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+          docker version
+          docker compose version
 
-      - name: Sync project to EC2
+      - name: Build Docker images
         run: |
-          rsync -avz --delete \
-            --exclude=".git" \
-            --exclude="node_modules" \
-            ./ \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/EcommerceApp
+          docker compose build
 
-      - name: Deploy using Docker Compose on EC2
+      - name: Start services
         run: |
-          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
-            set -e
-            cd ~/EcommerceApp
+          docker compose up -d
 
-            export MONGO_ROOT_USER=${{ secrets.MONGO_ROOT_USER }}
-            export MONGO_ROOT_PASSWORD=${{ secrets.MONGO_ROOT_PASSWORD }}
-            export MONGO_DB_NAME=${{ secrets.MONGO_DB_NAME }}
-            export JWT_SECRET=${{ secrets.JWT_SECRET }}
-            export SESSION_SECRET=${{ secrets.SESSION_SECRET }}
+      - name: Wait for MongoDB
+        run: |
+          sleep 15
+          docker logs mongo
 
-            docker-compose down
-            docker-compose build
-            docker-compose up -d
-          EOF
+      - name: Check running containers
+        run: |
+          docker ps
+          docker compose ps
+
+      - name: Stop services
+        if: always()
+        run: |
+          docker compose down -v
