--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   mongo:
     image: mongo:7
@@ -35,11 +33,8 @@ services:
       - "4500:4500"
     depends_on:
       - mongo
-    env_file:
-      - ./Backend/.env
     environment:
-      - MONGODB_URI=mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
-
+      MONGODB_URI: mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
 
   frontend:
     build: ./Frontend
