--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,8 @@ services:
       - "4500:4500"
     depends_on:
       - mongo
+    env_file:
+      - ./Backend/.env
     environment:
       MONGODB_URI: mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
 
