--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   mongo:
     image: mongo:7
@@ -36,7 +38,8 @@ services:
     env_file:
       - ./Backend/.env
     environment:
-      MONGODB_URI: mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
+      - MONGODB_URI=mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
+
 
   frontend:
     build: ./Frontend
