--- a/k8files/backend.yaml
+++ b/k8files/backend.yaml
@@ -1,37 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
+  name: frontend
   namespace: ecommerce
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: backend
+      app: frontend
   template:
     metadata:
       labels:
-        app: backend
+        app: frontend
     spec:
       containers:
-        - name: backend
-          image: 301678011164.dkr.ecr.us-east-1.amazonaws.com/ecommerce-backend:IMAGE_TAG
+        - name: frontend
+          image: 301678011164.dkr.ecr.us-east-1.amazonaws.com/ecommerce-frontend:IMAGE_TAG
           imagePullPolicy: Always
           ports:
-            - containerPort: 4500
-          env:
-            - name: MONGODB_URI
-              value: mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
+            - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: frontend
   namespace: ecommerce
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
-    app: backend
+    app: frontend
   ports:
-    - port: 4500        # Service port
-      targetPort: 4500 # Container port
+    - port: 5173        # External port
+      targetPort: 80    # Container port
