--- a/k8files/seller.yaml
+++ b/k8files/seller.yaml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
         - name: seller
-          image: <ACCOUNT_ID>.dkr.ecr.<REGION>.amazonaws.com/ecommerce-seller:latest
+          image: 301678011164.dkr.ecr.us-east-1.amazonaws.com/ecommerce-seller:IMAGE_TAG
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
 ---
