--- a/.github/workflows/docker-compose-ci.yml
+++ b/.github/workflows/docker-compose-ci.yml
@@ -79,6 +79,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add k8s/
+          git add .
           git commit -m "Update image tags to ${IMAGE_TAG}"
           git push
