--- a/k8files/backend.yaml
+++ b/k8files/backend.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: 301678011164.dkr.ecr.us-east-1.amazonaws.com/ecommerce-backend:684181e
+          image: 301678011164.dkr.ecr.us-east-1.amazonaws.com/ecommerce-backend:IMAGE_TAG
           imagePullPolicy: Always
           ports:
             - containerPort: 4500
