--- a/k8files/seller.yaml
+++ b/k8files/seller.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: seller
-          image: 301678011164.dkr.ecr.us-east-1.amazonaws.com/ecommerce-seller:684181e
+          image: 301678011164.dkr.ecr.us-east-1.amazonaws.com/ecommerce-seller:IMAGE_TAG
           imagePullPolicy: Always
           ports:
             - containerPort: 80
