--- a/k8files/backend.yaml
+++ b/k8files/backend.yaml
@@ -29,7 +29,7 @@ metadata:
   name: backend
   namespace: ecommerce
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: backend
   ports:
