--- a/Backend/.env
+++ b/Backend/.env
@@ -9,3 +9,10 @@ MONGODB_URI=mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
 
 //FRONTEND_URLS=http://18.232.174.160:5173,http://18.232.174.160:5174
 
+FRONTEND_URLS=http://a104e775ff43b4f9bafebff87bccd3be-1337863498.us-east-1.elb.amazonaws.com:5173,http://a3238236b41544077a653659ad0419f2-2026295076.us-east-1.elb.amazonaws.com:5174
+
+PORT=4500
+
+//MONGODB_URI=mongodb://admin:7325APM@mongo:27017/ecommerce?authSource=admin
+
+
