--- a/Seller/.env
+++ b/Seller/.env
@@ -1,1 +1,1 @@
-//VITE_API_URL=http://18.232.174.160:4500
+VITE_API_URL=http://a3c40a00cc10a4a7fa5c9f9c2819b24a-1900887051.us-east-1.elb.amazonaws.com:4500
